# Heroman-t-project

./: .aider.chat.history.md  .aider.input.history  .gitignore  CMakeLists.txt  README.md  build.bat  setup_assets.bat  setup_sprites.bat
include/: database.h  game.h  player.h  sprites.h  tasks.h  ui.h
src/: database.c  game.c  main.c  player.c  sprites.c  tasks.c  ui.c
